fix tests coverage